Add tool bar containing buttons for user controls

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 <body>
     <div id="wrapper">
         <header>Pixel-Pad</header>
+        <div id="tools">
+            <button><img src="icons/paint-palette.png"></button>
+            <button><img src="icons/eraser.png"></button>
+            <button><img src="icons/ruler.png"></button>
+            <button><img src="icons/garbage.png"></button>
+        </div>
         <div id="container"></div>
     </div>
 
