Add functionality to palette button. Allow the user to choose a color using the color picker, grab that value, and update the color used to fill cells with said value.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <meta name="description" content="Pixel-Pad">
 
     <link rel="stylesheet" href="style.css">
-
+    
 </head>
 
 <body>
     <div id="wrapper">
-        <header>Pixel-Pad</header>
+        <header></header>
         <div id="tools">
+            <input type="color" id="paletteColor" style='opacity:0;width:100px;height:100px;position:absolute;'/>
             <button><img src="icons/paint-palette.png"></button>
             <button><img src="icons/eraser.png"></button>
             <button><img src="icons/ruler.png"></button>
