Add functionality to eraser button. Once clicked, the active color is set to whitesmoke

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <div id="tools">
             <input type="color" id="paletteColor" style='opacity:0;width:100px;height:100px;position:absolute;'/>
             <button><img src="icons/paint-palette.png"></button>
-            <button><img src="icons/eraser.png"></button>
+            <button id="erase"><img src="icons/eraser.png"></button>
             <button><img src="icons/ruler.png"></button>
-            <button><img src="icons/garbage.png"></button>
+            <button id="clear"><img src="icons/garbage.png"></button>
         </div>
         <div id="container"></div>
     </div>
