Add functionality to clear grid button. Set the background color of each cell to whitesmoke.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button><img src="icons/paint-palette.png"></button>
             <button id="erase"><img src="icons/eraser.png"></button>
             <button><img src="icons/ruler.png"></button>
-            <button id="clear"><img src="icons/garbage.png"></button>
+            <button onclick="clearGrid()" id="clear"><img src="icons/garbage.png"></button>
         </div>
         <div id="container"></div>
     </div>
