Add logic for removing cells from the grid container. Build function for resizing the grid

--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
 
     <title>Pixel-Pad</title>
     <meta name="description" content="Pixel-Pad">
-
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <div id="wrapper">
         <header></header>
         <div id="tools">
-            <input type="color" id="paletteColor" style='opacity:0;width:100px;height:100px;position:absolute;'/>
+            <input type="color" id="paletteColor" style='opacity:0;width:100px;height:100px;position:absolute;' />
             <button><img src="icons/paint-palette.png"></button>
             <button id="erase"><img src="icons/eraser.png"></button>
             <button><img src="icons/ruler.png"></button>
