Fix indentations and replace button artwork.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <div id="wrapper">
         <header>Pixel Pad</header>
         <div id="tools">
-            <input type="color" id="paletteColor" title="Choose a color" style='opacity:0;width:100px;height:100px;position:absolute;' />
-            <button><img src="icons/paint-palette.png"></button>
-            <button id="erase" title="Erase"><img src="icons/eraser.png"></button>
-            <button onclick="resize()" title="Resize the grid"><img src="icons/ruler.png"></button>
-            <button onclick="clearGrid()" title="Clear the grid" id="clear"><img src="icons/garbage.png"></button>
+            <input type="color" id="paletteColor" title="Choose a color"
+                style='opacity:0;width:100px;height:100px;position:absolute;' />
+            <button><img src="icons/palettepix.png"></button> 
+            <button id="erase" title="Erase"><img src="icons/eraserpix.png"></button>
+            <button onclick="resize()" title="Resize grid"><img src="icons/resizepix.png"></button> 
+            <button onclick="clearGrid()" title="Clear grid" id="clear"><img src="icons/trashcanpix.png"></button> 
         </div>
         <div id="container"></div>
     </div>
